Implement JWT-based security checks and enhance user role management, add Head on tenant id
